# ft_ping

./: .gitignore  CMakeLists.txt  Makefile  author
Includes/: ft_ping.h
Libs/libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_find_char.c  ft_itoa.c  ft_memcmp.c  ft_power.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strncmp.c  ft_strsub.c  libft.h  list.c  list.h
Libs/libft/ft_printf/: flags.h  ft_flag_funcs.c  ft_flags.c  ft_fp_arr_init.c  ft_int_arr_prefix.c  ft_int_recall_funcs.c  ft_print_memory.c  ft_print_memory_split_condition.c  ft_printf.c  ft_put_float.c  ft_put_float_nbr_base.c  ft_put_int.c  ft_put_nbr_base.c  ft_put_tab.c  ft_putchar.c  ft_recall.c  ft_scan.c  ft_scan_funcs.c  ft_strlen.c  libconvfuncs.h  libflagfuncs.h  libprintf.h  librecall.h
Srcs/: calculate_ping.c  create_socket.c  fill_ping_pckt.c  ft_recvmsg.c  get_host_addr.c  main.c  prepare_msg_buffer.c  print_ping_res.c  read_msg_data.c  sigint_handler.c  single_ping.c  stats.c  timeval_math.c
